--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1 class="pickers-title">
+<h1 class="app-title">
 	Angular Pickers
 </h1>
 
@@ -6,6 +6,7 @@
 	<a routerLink="/home" routerLinkActive="active">Home</a>
 	<a routerLink="/pickers" routerLinkActive="active">Pickers</a>
 	<a routerLink="/modalwindows" routerLinkActive="active">ModalWindows</a>
+	<a routerLink="/autocomplete" routerLinkActive="active">Autocomplete</a>
 </nav>
 
 <router-outlet></router-outlet>
