--- a/src/app/modal-windows/modal-windows.component.html
+++ b/src/app/modal-windows/modal-windows.component.html
@@ -4,6 +4,7 @@
 
 <nav>
 	<a routerLink="/modalwindows/modalboxbootstrap" routerLinkActive="active">ModalBoxBootstrap</a>
+	<a routerLink="/modalwindows/ngxmoddialog" routerLinkActive="active">NgxModdialog</a>
 </nav>
 
 <router-outlet></router-outlet>
