Added modal window component ngx-moddialog

--- a/src/app/autocomplete/ng-test-autocomplete/ng-test-autocomplete.component.html
+++ b/src/app/autocomplete/ng-test-autocomplete/ng-test-autocomplete.component.html
@@ -10,3 +10,8 @@
 <br />
 <hr />
 <button class="btn btn-danger" (click)="goToAutocomplete()">Go Back</button> 
+
+
+<hr />
+  <a class="bg-success" href="https://github.com/oferh/ng2-completer">Go to the repository on GitHub</a>
+<hr />
