--- a/src/app/modal-windows/modal-box-bootstrap/modal-box-bootstrap.component.html
+++ b/src/app/modal-windows/modal-box-bootstrap/modal-box-bootstrap.component.html
@@ -152,6 +152,11 @@
                                     [disabled]="!signupForm.valid">
                                 Save
                             </button>
+                            <button (click)="btnCancel()" class="btn btn-primary"
+                                    type="button"
+                                  >
+                                Cancel
+                            </button>
                         </span>
             </div>
           </div>
