--- a/src/app/modal-windows/ngx-moddialog/ngx-moddialog.component.html
+++ b/src/app/modal-windows/ngx-moddialog/ngx-moddialog.component.html
@@ -6,3 +6,8 @@
 <hr />
 <button class="btn btn-danger" (click)="goToModalWindows()">Go Back</button>
 <button class="btn btn-primary" (click)="onClick()">Alert</button>
+
+
+<hr />
+  <a class="bg-success" href="https://github.com/shlomiassaf/ngx-modialog">Go to the repository on GitHub</a>
+<hr />
