--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
 	<a routerLink="/pickers" routerLinkActive="active">Pickers</a>
 	<a routerLink="/modalwindows" routerLinkActive="active">ModalWindows</a>
 	<a routerLink="/autocomplete" routerLinkActive="active">Autocomplete</a>
+	<a routerLink="/primeng" routerLinkActive="active">Primeng</a>
 </nav>
 
 <router-outlet></router-outlet>
