--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,7 +7,7 @@
 
 h1.app-title {
     padding: 0 0 6px 65px;
-    background: url('images/angular.png') no-repeat; 
+    background: url('../assets/images/angular.png') no-repeat; 
 }
 nav h4 {
     margin: 4px 0 10px 0;
