--- a/src/app/primeng/autocomplete-prime/autocomplete-prime.component.html
+++ b/src/app/primeng/autocomplete-prime/autocomplete-prime.component.html
@@ -4,9 +4,38 @@
 
 <hr />
 
+<h3 class="first">Basic</h3>
+<p-autoComplete [(ngModel)]="country" [suggestions]="filteredCountriesSingle" (completeMethod)="filterCountrySingle($event)"
+  field="name" [size]="30" placeholder="Countries" [minLength]="1"></p-autoComplete>
+<span style="margin-left:10px">Country: {{country ? country.name||country : 'none'}}</span>
+
+<h3>Advanced</h3>
+<p-autoComplete [(ngModel)]="brand" [suggestions]="filteredBrands" (completeMethod)="filterBrands($event)" [size]="30" [minLength]="1"
+  placeholder="Hint: type 'v' or 'f'" [dropdown]="true" (onDropdownClick)="handleDropdownClick($event)">
+  <ng-template let-brand pTemplate="item">
+    <div class="ui-helper-clearfix" style="border-bottom:1px solid #D5D5D5">
+      <img src="assets/images/cars/{{brand}}.png" style="width:32px;display:inline-block;margin:5px 0 2px 5px" />
+      <div style="font-size:18px;float:right;margin:10px 10px 0 0">{{brand}}</div>
+    </div>
+  </ng-template>
+</p-autoComplete>
+<span style="margin-left:50px">Brand: {{brand||'none'}}</span>
+
+<h3>Multiple</h3>
+<p-autoComplete [(ngModel)]="countries" [suggestions]="filteredCountriesMultiple" (completeMethod)="filterCountryMultiple($event)"
+  styleClass="wid100" [minLength]="1" placeholder="Countries" field="name" [multiple]="true">
+</p-autoComplete>
+<ul>
+  <li *ngFor="let c of countries">{{c.name}}</li>
+</ul>
+
+
 
 <hr />
-  <a class="bg-success" href="https://github.com/DanielYKPan/date-time-picker">Go to the repository on GitHub</a>
+<a class="bg-success" href="https://github.com/primefaces/primeng">Go to the repository on GitHub</a>
+<hr />
+<hr />
+<a class="bg-primary" href="https://www.primefaces.org/primeng/#/autocomplete">Go to the site PrimeNg</a>
 <hr />
 
 <button class="btn btn-danger" (click)="goToPrimeng()">Go Back</button>
