--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,8 @@
- @import "../../node_modules/bootstrap/dist/css/bootstrap.min.css"; 
-
-
 :host {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
 h1.app-title {
-    padding: 0 0 6px 65px;
+    padding: 0 0 10px 65px;
     background: url('../assets/images/angular.png') no-repeat; 
 }
 nav h4 {
@@ -16,11 +12,13 @@ nav a {
     text-decoration: none;
     transition: all 0.5s;
     color: #E03237;
+    font-size: 16px;
+    padding: 0 5px;
 }
 nav a.active {
     border-radius: 3px;
     padding: 2px 8px;
     background-color: #E03237;
     color:white;
-}  
+} 
  
