--- a/src/app/autocomplete/ng-test-autocomplete/ng-test-autocomplete.component.html
+++ b/src/app/autocomplete/ng-test-autocomplete/ng-test-autocomplete.component.html
@@ -1,11 +1,11 @@
- <p>
+ <h4>
   ng-test-autocomplete works!
-</p>
+</h4>
 
 <h1>Search color</h1>
 <ng2-completer [inputClass]="'form-control'" [(ngModel)]="searchStr" [datasource]="dataService" [minSearchLength]="0"></ng2-completer>
 <h1>Search captain</h1>
-<ng2-completer [(ngModel)]="captain" [datasource]="captains" [minSearchLength]="0"></ng2-completer>
+<ng2-completer [inputClass]="'form-control'" [(ngModel)]="captain" [datasource]="captains" [minSearchLength]="0"></ng2-completer>
 
 <br />
 <hr />
