--- a/src/app/modal-windows/ngx-moddialog/ngx-moddialog.component.html
+++ b/src/app/modal-windows/ngx-moddialog/ngx-moddialog.component.html
@@ -1,11 +1,13 @@
-<p>
+<h4>
   ngx-moddialog works!
-</p>
+</h4>
 
 <br />
 <hr />
 <button class="btn btn-danger" (click)="goToModalWindows()">Go Back</button>
-<button class="btn btn-primary" (click)="onClick()">Alert</button>
+<button class="btn btn-primary" (click)="onClickAlert()">Alert</button>
+<button class="btn btn-primary" (click)="onClickPrompt()">Prompt</button>
+<button class="btn btn-primary" (click)="onClickConfirm()">Confirm</button>
 
 
 <hr />
