--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,14 @@
-@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";     
-
- .test {
+body {
+    margin: 8px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+}
+p {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.test {
     width: 500px;
     border-color:  green;
-} 
+}
