Added angular-typeahead component

--- a/src/app/autocomplete/autocomplete.component.html
+++ b/src/app/autocomplete/autocomplete.component.html
@@ -5,6 +5,7 @@
 <nav>
 	<a routerLink="/autocomplete/ng-test-autocomplete" routerLinkActive="active">NgTestAutocomplete</a>
 	<a routerLink="/autocomplete/custom-autocomplete" routerLinkActive="active">CustomAutocomplete</a>
+	<a routerLink="/autocomplete/angular-typeahead" routerLinkActive="active">AngularTypeahead</a>
 </nav>
 
  <router-outlet></router-outlet> 
