--- a/src/app/autocomplete/custom-autocomplete/custom-autocomplete.component.css
+++ b/src/app/autocomplete/custom-autocomplete/custom-autocomplete.component.css
@@ -25,11 +25,12 @@
 	padding:5px;
 	display: block;
 	text-decoration: none;
-	color:#7E7E7E;
+	color:#55595c;
 }
 
 .suggestions ul li a:hover{
-	background-color: #f1f1f1;
+	background-color: #0275d8;
+	color: #ffffff;
 }
 
 .test0 {
