--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,8 @@
 <h4>
   home works!
 </h4>
+
+<br />
+<hr />
+<a class="bg-success" href="https://github.com/AndreiLukashevich/ng-components">Go to the repository on GitHub</a>
+<hr />
