--- a/src/app/pickers/datepicker-bootstrap/datepicker-bootstrap.component.html
+++ b/src/app/pickers/datepicker-bootstrap/datepicker-bootstrap.component.html
@@ -7,22 +7,21 @@
 <div class="container">
   <form novalidate [formGroup]="testForm">
 
-    <div class="form-group">
-      <label for="date">Date</label>
-      <date-picker id="date" formControlName="date" mode="date"></date-picker>
+    <div class="form-group input-group date" data-provide="datepicker">
+      <input type="text" class="form-control" id="datepicker">
+      <div class="input-group-addon">
+        <span class="glyphicon glyphicon-th"></span>
     </div>
-    <div class="form-group">
-      <label for="time">Time</label>
-      <date-picker id="time" formControlName="time" mode="time"></date-picker>
     </div>
-    <div class="form-group">
-      <label for="datetime">Date&Time</label>
+    <div class="form-group input-group bootstrap-timepicker timepicker">
+      <input type="text" class="form-control" id="timepicker">
+      <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
     </div>
   </form>
 </div>
 
 
-<datetime [(ngModel)]="date"></datetime>
+<!-- <datetime [(ngModel)]="date"></datetime> -->
 
 
 <hr />
