--- a/src/app/pickers/datepicker-bootstrap/datepicker-bootstrap.component.html
+++ b/src/app/pickers/datepicker-bootstrap/datepicker-bootstrap.component.html
@@ -7,7 +7,7 @@
 <div class="container">
   <form novalidate [formGroup]="testForm">
 
-    <div class="form-group input-group date" data-provide="datepicker">
+    <div class="form-group input-group date">
       <input type="text" class="form-control" id="datepicker">
       <div class="input-group-addon">
         <span class="glyphicon glyphicon-th"></span>
