--- a/src/app/pickers/datepicker-bootstrap/datepicker-bootstrap.component.html
+++ b/src/app/pickers/datepicker-bootstrap/datepicker-bootstrap.component.html
@@ -9,12 +9,11 @@
 
     <div class="form-group input-group date">
       <input type="text" class="form-control" id="datepicker">
-      <div class="input-group-addon">
-        <span class="glyphicon glyphicon-th"></span>
-    </div>
+      <span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
     </div>
     <div class="form-group input-group bootstrap-timepicker timepicker">
-      <input type="text" class="form-control" id="timepicker">
+      <input type="text" class="form-control" id="timepicker" data-provide="timepicker"
+         >
       <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
     </div>
   </form>
@@ -22,6 +21,23 @@
 
 
 <!-- <datetime [(ngModel)]="date"></datetime> -->
+
+
+<div class="container">
+  <div class="row">
+      <div class='col-sm-6'>
+          <div class="form-group">
+              <div class='input-group date' id='datetimepicker1'>
+                  <input type='text' class="form-control" />
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+
 
 
 <hr />
