Fixed bugs and updated components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
 	<a routerLink="/autocomplete" routerLinkActive="active">Autocomplete</a>
 	<a routerLink="/duration" routerLinkActive="active">Duration</a>
 	<a routerLink="/primeng" routerLinkActive="active">Primeng</a>
+	<a routerLink="/ngx" routerLinkActive="active">Ngx</a>
 </nav>
 
 <router-outlet></router-outlet>
