--- a/src/app/pickers/date-time-picker/date-time-picker.component.html
+++ b/src/app/pickers/date-time-picker/date-time-picker.component.html
@@ -9,7 +9,7 @@
     <div class="form-group">
       <label for="date0">Date</label>
       <input id="date0" value="123" formControlName="date0" class="form-control" [(ngModel)]="date0" [dpDayPicker]="config" theme="dp-material"
-        mode="day" />
+        mode="daytime" />
     </div>
     <div class="form-group">
       <label for="time0">Time</label>
