--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,6 +2,8 @@
   home works!
 </h4>
 
+<img src="URL">
+
 <br />
 <hr />
 <a class="bg-success" href="https://github.com/AndreiLukashevich/ng-components">Go to the repository on GitHub</a>
