--- a/src/app/pickers/date-time-picker/date-time-picker.component.html
+++ b/src/app/pickers/date-time-picker/date-time-picker.component.html
@@ -1,28 +1,33 @@
 <h4>
-  time-picker works!
+  date-time-picker works!
 </h4>
 
 <hr />
 
- <div class="container">
+<div class="container">
   <form novalidate [formGroup]="testForm">
     <div class="form-group">
-      <label for="date0">Date</label>
-      <input id="date0" value="123" formControlName="date0" class="form-control" [(ngModel)]="date0" [dpDayPicker]="config" theme="dp-material"
-        mode="daytime" />
+      <label for="date">Date</label>
+      <input id="date" formControlName="date" class="form-control" [(ngModel)]="date" [dpDayPicker]="configDate" theme="dp-material"
+        mode="day" />
     </div>
     <div class="form-group">
-      <label for="time0">Time</label>
-      <input id="time0" formControlName="time0" class="form-control" [(ngModel)]="time0" [dpDayPicker]="configTime" theme="dp-material"
+      <label for="time">Time</label>
+      <input id="time" formControlName="time" class="form-control" [(ngModel)]="time" [dpDayPicker]="configTime" theme="dp-material"
         mode="time" />
     </div>
+    <div class="form-group">
+      <label for="datetime">DateTime</label>
+      <input id="datetime" formControlName="datetime" class="form-control" [(ngModel)]="datetime" [dpDayPicker]="configDateTime" theme="dp-material"
+        mode="daytime" />
+    </div>
   </form>
-</div> 
+</div>
 
-<label for="date">Date</label>
+<!--<label for="date">Date</label>
 <dp-date-picker id="date" [config]="configDate" theme="dp-material" mode="day"></dp-date-picker>
 <label for="time">Time</label>
-<dp-date-picker id="time" [config]="configTime" theme="dp-material" mode="time"></dp-date-picker>
+<dp-date-picker id="time" [config]="configTime" theme="dp-material" mode="time"></dp-date-picker>-->
 
 <hr />
 <a class="bg-success" href="https://github.com/vlio20/angular-datepicker">Go to the repository on GitHub</a>
